objects/Google_Token__mdt.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <inlineHelpText>Hols the Live Access token to be used to make the API Calls</inlineHelpText>
        <label>access_token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>expires_in__c</fullName>
        <label>expires_in</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>expires_in_time__c</fullName>
        <inlineHelpText>The Expiration time of the access token</inlineHelpText>
        <label>expires_in_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>refresh_token__c</fullName>
        <inlineHelpText>Holds the refresh token to be used while refreshing the live token to get a new access token</inlineHelpText>
        <label>refresh_token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <label>scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Google Token</label>
    <pluralLabel>Google Tokens</pluralLabel>
</CustomObject>